[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytermdump"
version = "0.1.0"
authors = [
    {name = "User"}
]
description = "Python wrapper for termdump utility"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = []

[[tool.setuptools.ext-modules]]
name = "pytermdump"
sources = ["pytermdump.c"]
extra-compile-args = ["-Wall"]