[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-logging"
version = "0.1.0"
authors = [
    {name = "User"}
]
description = "Python wrapper for termdump utility with HTML conversion for Claude logs"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
claude-logging = "claude_logging.__main__:main"

[tool.setuptools]
packages = ["claude_logging"]

[[tool.setuptools.ext-modules]]
name = "claude_logging.pytermdump"
sources = ["claude_logging/pytermdump.c"]
extra-compile-args = ["-Wall"]